feat(deploy): production Dockerfile for FastAPI + TFLite (uvicorn on ${PORT:-80})

--- a/sagemaker_deploy/Dockerfile
+++ b/sagemaker_deploy/Dockerfile
@@ -7,17 +7,18 @@ FROM python:3.10.12
 WORKDIR /app
 
 # Copy requirements and install dependencies
-COPY ./requirements.txt ./requirements.txt
+# Expect build context = repo root (docker build -f sagemaker_deploy/Dockerfile .)
+COPY sagemaker_deploy/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
 # Copy app code
-COPY ./app ./app
+COPY sagemaker_deploy/app ./app
 
-# Copy TFLite model to the container root (if not already in app/)
-COPY ../Cubenet_Best_Quantized.tflite ./Cubenet_Best_Quantized.tflite
+# Copy TFLite model to container (if not already in app/)
+COPY Cubenet_Best_Quantized.tflite ./Cubenet_Best_Quantized.tflite
 
 # Expose port
 EXPOSE 80
 
-# Run FastAPI app with uvicorn
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+# Run FastAPI app with uvicorn; honor platform PORT if provided
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-80}"]
